@@ -31,6 +31,10 @@
     <action issue="COLLECTIONS-462" dev="tn" type="add" due-to="Andy Seaborne, Claude Warren">
       Added "PeekingIterator" decorator to support one-element lookahead during iteration.
     </action>
+    <action issue="COLLECTIONS-461" dev="tn" type="fix" due-to="Matt Benson, sebb">
+      Added additional clarification to javadoc of interface "Put" wrt return type of
+      "put(Object, Object)" method. 
+    </action>
     <action issue="COLLECTIONS-460" dev="tn" type="update">
       Changed "IteratorChain" to use internally a "Queue" instead of a "List". Iterators are
       removed from the queue once used and can be garbage collected after being exhausted.
